add new endpoint & kafka &  events
